--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,7 @@ Use a more readable tab size (opinionated).
 */
 
 html {
+	-moz-tab-size: 4;
 	tab-size: 4;
 }
 
@@ -52,8 +53,7 @@ Improve consistency of default fonts in all browsers. (https://github.com/sindre
 
 body {
 	font-family:
-		system-ui,
-		-apple-system, /* Firefox supports this but not yet `system-ui` */
+		system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, 
 		'Segoe UI',
 		Roboto,
 		Helvetica,
@@ -88,7 +88,8 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 */
 
 abbr[title] {
-	text-decoration: underline dotted;
+	-webkit-text-decoration: underline dotted;
+	        text-decoration: underline dotted;
 }
 
 /**
@@ -349,7 +350,7 @@ ul {
  */
 
 html {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
   line-height: 1.5; /* 2 */
 }
 
@@ -423,6 +424,16 @@ img {
 
 textarea {
   resize: vertical;
+}
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  opacity: 1;
+  color: #9ca3af;
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  opacity: 1;
+  color: #9ca3af;
 }
 
 input::placeholder,
@@ -586,9 +597,6 @@ video {
 		max-width: 1536px;
 	}
 }
-.m-auto {
-	margin: auto;
-}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -601,12 +609,6 @@ video {
 }
 .w-full {
 	width: 100%;
-}
-.w-1\/2 {
-	width: 50%;
-}
-.flex-col {
-	flex-direction: column;
 }
 .justify-center {
 	justify-content: center;
